--- a/site-teste/src/index.css
+++ b/site-teste/src/index.css
@@ -1,5 +1,12 @@
 body {
-  margin: 0;
+  height: 95vh;
+  padding: 10px;
+  background-color: #e0e7eb;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
